--- a/KMS.EmployeeManagement/Web.config
+++ b/KMS.EmployeeManagement/Web.config
@@ -33,6 +33,10 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Employee/PageNotFound" />
+    </httpErrors>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
