--- a/KMS.EmployeeManagement/KMS.EmployeeManagement.csproj
+++ b/KMS.EmployeeManagement/KMS.EmployeeManagement.csproj
@@ -174,6 +174,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Views\Shared\_404.cshtml" />
+    <Content Include="Views\Employee\NewEmployee.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
