--- a/KMS.EmployeeManagement/Web.config
+++ b/KMS.EmployeeManagement/Web.config
@@ -12,8 +12,8 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="true"/> 
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -35,7 +35,7 @@
   <system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" />
-      <error statusCode="404" responseMode="ExecuteURL" path="/Employee/PageNotFound" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Error/PageNotFound" />
     </httpErrors>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
