--- a/KMS.EmployeeManagement/Web.config
+++ b/KMS.EmployeeManagement/Web.config
@@ -7,15 +7,17 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true"/> 
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On"></customErrors>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -45,7 +47,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"/>
+      <remove name="WebDAVModule" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
@@ -93,4 +95,21 @@
   <connectionStrings>
     <add name="EmployeeDB" connectionString="Data Source=.; persist security info=True; Initial Catalog=EmployeeDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
+<log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="App_Data/log.txt" />
+      <appendToFile value ="true" />
+      <rollingStyle value="Size" />
+      <maximumFileSize value="1MB" />
+      <maxSizeRollBackup value ="10" />
+      <staticLogFileSize value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern"  value="%newline %date  %message  %newline  %newline  ###########################################" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ERROR" />
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+  </log4net>
 </configuration>
