--- a/KMS.EmployeeManagement/Web.config
+++ b/KMS.EmployeeManagement/Web.config
@@ -24,6 +24,10 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Error/PageNotFound" />
+    </httpErrors>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
